--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-native": "0.68.1",
     "react-native-svg": "12.3.0",
     "react-native-svg-transformer": "^1.0.0",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "expo-font": "~10.1.0",
+    "expo-app-loading": "~2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
