--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-svg": "12.3.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-web": "0.17.7",
-    "react-native-gesture-handler": "~2.2.1"
+    "react-native-gesture-handler": "~2.2.1",
+    "@react-native-async-storage/async-storage": "~1.17.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
