--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-animated-circular-progress": "^1.0.6",
+    "react-native-circular-progress-indicator": "^4.2.0",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "4.2.4",
